Bug fix for overflow text in large screen in home page

--- a/src/Pages/NewHomePageMui/NewHomePageStyle.scss
+++ b/src/Pages/NewHomePageMui/NewHomePageStyle.scss
@@ -409,6 +409,7 @@
     text-transform: none !important;
     height: 25px !important;
     background-color: #fff !important;
+    overflow: hidden;
 }
 
 .ya-send-icon {
